--- a/styles/style.css
+++ b/styles/style.css
@@ -31,7 +31,7 @@ html{
 }
 
 .wrapper{
-    max-width: 1250px;
+    max-width: 1300px;
     width: 90%;
     margin: 0 auto;
 }
@@ -41,7 +41,7 @@ img{
 }
 
 /* Hamburger Menu */
-nav button{
+.ham{
     visibility: hidden;
 }
 
@@ -56,7 +56,8 @@ h2,
 h4,
 .article .button,
 .rows .button,
-footer .button{
+#footer .button,
+#footer .button2{
     font-family: 'italiana';
 }
 
@@ -70,7 +71,8 @@ h4,
 h1,
 h2,
 h4,
-p{
+p,
+span{
     color:#ffffff;
 }
 
@@ -80,7 +82,7 @@ h3{
 }
 
 h1{
-    font-size: 8rem;
+    font-size: 10rem;
 }
 
 h2{
@@ -150,8 +152,19 @@ a{
     padding: 0 10px;
 }
 
+.title{
+    display: inline-block;
+    margin: 10% 0 0 20%;
+}
+
 .title h1:first-child{
-    margin-top:5%;
+    margin-left:0;
+}
+
+.title h1:nth-child(2),
+.title h3{
+    text-align: right;
+    margin-left:23%;
 }
 
 h3,
@@ -164,11 +177,6 @@ h3,
 
 h3{
     font-size: 2rem;
-}
-
-h1,
-h3 {
-    margin-left:23%;
 }
 
 /* Social Media Links */
@@ -209,10 +217,13 @@ h3 {
 }
 
 .article img{
-    height: 33%;
-    width: 33%;
+    width:33%;
     float:left;
     margin-right:2%;
+}
+
+.article .img2{
+    display:none;
 }
 
 .text4{
@@ -296,6 +307,7 @@ h3 {
     width: calc(100% / 3);
     float:left;
     margin: 5% 0;
+    line-height: 2rem;
 }
 
 .column2 ul li:nth-child(1) p,
@@ -304,12 +316,23 @@ h3 {
 }
 
 input[type=email]{
-    width: 100%;
     padding: 10px;
-    margin-bottom: 10px;
+    margin:10px 0;
     border:none;
     font-size: 1.5rem;
+    width:80%;
+    float:left;
 } 
+
+.button2{
+    display:inline-block;
+    background: black;
+    margin:10px 0;
+    padding: 15px;
+    font-size: 1rem;
+    width:20%;
+    text-transform: uppercase;
+}
 
 .column3{
     text-align: right;
@@ -337,4 +360,109 @@ input[type=email]{
     font-size:6rem;
     text-align:center;
     margin-bottom:5px;
+}
+
+/* @media (max-width: 950px) {
+    body{
+        color: red;
+    }
+}
+
+@media (max-width: 760px) {
+    body{
+        color: blue;
+    }
+} */
+
+@media (max-width: 500px) {
+    #header{
+        background-image: url('./assets/header-1.jpg');
+        background-size: fit;
+        height: 95vh;
+    }
+
+    #header ul{
+        visibility: hidden;
+        margin:0;
+    }
+
+
+    .ham{
+        display:inline-block;
+        visibility: visible;
+        color:white;
+        font-size: 5rem;
+        background-color:transparent;
+        border:none;
+        position: absolute;
+        right:10px;
+        top:10px;
+    }
+
+    .title{
+        /* border:red solid 2px; */
+        float: left;
+        margin:40% 0 0 0;
+    }
+
+    .title h1{
+        font-size: 7rem;
+        margin-left:0;
+    }
+
+    .article{
+        position:relative;
+        height:80vh;
+        padding-top:10%;
+    }
+
+    .article img{
+        float:none;
+        width:100%;
+        margin:0;
+    }
+
+    .article .img1{
+        display: none;
+    }
+
+    .article .img2{
+        display: block;
+    }
+    
+    .text4{
+        display:inline-block;
+        width: 100%;
+        margin-top:10%;
+    }
+
+    .text4 h2,
+    .text4 .button{
+        text-align: center;
+    }
+
+    .text4 .button{
+        display: block;
+        position: absolute;
+        bottom:5%;
+        left:25%;
+        font-size: 2.8rem;
+    }
+
+    .grid .box{
+        width:49%;
+        margin:0;
+    }
+
+    
+
+    .collection div:nth-child(3){
+        border:red solid 2px;
+        display:none;
+    }
+
+    .events .box {
+        width:100%;
+        margin:10px;
+    }
 }
