--- a/styles/style.css
+++ b/styles/style.css
@@ -236,7 +236,14 @@ h3{
     border: 2px solid #faba63;
     display:inline-block;
     padding:5px;
-    margin-top:10px;    
+    margin-top:10px;
+    transition: 400ms;    
+}
+
+.button:hover{
+    border: white 2px solid;
+    color:white;
+    background-color:#faba63
 }
 
 /* Secondary Section ------- */
@@ -333,10 +340,11 @@ input[type=email]{
     display:inline-block;
     background: black;
     margin:10px 0;
-    padding: 15px;
+    padding: 1rem;
     font-size: 1rem;
     width:20%;
     text-transform: uppercase;
+    text-align: center;
 }
 
 .column3{
@@ -367,19 +375,117 @@ input[type=email]{
     margin-bottom:5px;
 }
 
-/* @media (max-width: 950px) {
-    body{
-        color: red;
+@media (max-width: 1020px) {
+
+    input[type=email]{
+        width:70%;
+    } 
+
+    .button2{
+        width:30%;
+    }
+}
+
+@media (max-width: 950px) {
+
+    .row1 p,
+    .row2 p{
+        font-size:1.3rem;
+    }
+
+    .row1 h2,
+    .row2 h2{
+        font-size:1.8rem;
     }
 }
 
 @media (max-width: 760px) {
-    body{
-        color: blue;
-    }
-} */
 
+    #header{
+        background-image: url('./assets/header-1.jpg');
+        background-size: fit;
+        height: 80vh;
+    }
+
+    .row1 img,
+    .row2 img,
+    .text1,
+    .text2{
+        width:100%;
+        float:none;
+        margin: 0;
+    }
+
+    .row1, .row2{
+        padding-bottom:5%;
+    }
+
+    .article p{
+        font-size:1.3rem;
+    }
+
+    .additional h4{
+        font-size: 1.7rem;
+    }
+
+    .column {
+        width: 100%;
+        float:none;
+        margin: 5% 0;
+        line-height: 2rem;
+    }
+
+    .column1{
+        margin:0 0 10px 0;
+        padding-top:5%;
+        margin-bottom:10%;
+    }
+
+    .column1 a{
+        font-family: 'lato';
+        font-size: 1.7rem;
+        font-weight: 300;
+        color:white;
+        display: inline-block;
+    }
+
+    .column2 ul li:nth-child(1) p,
+    .column2 ul li:nth-child(2) p{
+        text-align: center;
+        width: 100%;
+    }
+    
+    input[type=email]{
+        margin-top:10px;
+        font-size: 1.5rem;
+        text-align: center;
+        width:80%;
+        float:none;
+        margin-left:10%;
+    } 
+    
+    .button2{
+        font-size: 2.6rem;
+        width:80%;
+        margin: 0 0 5% 10%;
+    }
+    
+    .column3{
+        text-align: center;
+        float: none;
+        margin: 0 0 10% 0;
+    }
+    
+    .column2 li:nth-child(1) p,
+    .column3 li:nth-of-type(1) p{
+        margin: 5% 0;
+        font-size: 3rem;
+    }
+}
+
+    /* Mobile View */
 @media (max-width: 500px) {
+
     #header{
         background-image: url('./assets/header-1.jpg');
         background-size: fit;
@@ -417,7 +523,7 @@ input[type=email]{
 
     .article{
         position:relative;
-        height:80vh;
+        height:100vh;
         padding-top:10%;
     }
 
@@ -510,66 +616,28 @@ input[type=email]{
     }
 
     .row1 .button{
-        top:44%;
+        top:40%;
         left:30%;
         margin:5%;
-    }
-
-    .column {
-        width: 100%;
-        float:none;
-        margin: 5% 0;
-        line-height: 2rem;
-    }
-
-    .column1{
-        margin:0 0 10px 0;
-        padding-top:5%;
-        margin-bottom:10%;
-    }
-
-    .column1 a{
-        font-family: 'lato';
-        font-size: 1.7rem;
-        font-weight: 300;
-        color:white;
-        display: inline-block;
-    }
-
-    .column2 ul li:nth-child(1) p,
-    .column2 ul li:nth-child(2) p{
-        text-align: center;
-        width: 100%;
-    }
-    
-    input[type=email]{
-        margin-top:10px;
         font-size: 1.5rem;
-        text-align: center;
+    }
+
+    .row2 .button{
+        font-size: 1.5rem;        
+    }
+
+    input[type=email]{
         width:100%;
-        float:none;
+        margin-left:0;
     } 
     
     .button2{
-        text-align: center;
-        display:inline-block;
-        background: black;
-        font-size: 2.6rem;
         width:100%;
-        text-transform: uppercase;
-        margin: 0 0 5% 0;
+        margin:0 0 5% 0;
     }
-    
-    .column3{
-        text-align: center;
-        float: none;
-        margin: 0 0 10% 0;
-    }
-    
-    .column2 li:nth-child(1) p,
-    .column3 li:nth-of-type(1) p{
-        margin: 5% 0;
-        font-size: 3rem;
+
+    .column3 p{
+        font-size: 1.8rem;
     }
 
 }
